--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ cortex-m-rtic = "1.0.0"
 # static-box = "0.2.0"
 pio-proc = "0.2.1"
 pio = "0.2.0"
+byte = "0.2.6"
 
 # cargo build/run
 [profile.dev]
