--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ panic-halt= "0.2.0"
 
 # cortex-m-rtic = "0.6.0-rc.4"
 cortex-m-rtic = "1.0.0"
+itoa = "1.0.5"
 
 # static-box = "0.2.0"
 pio-proc = "0.2.1"
