--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ heapless = "0.7.16"
 pio-proc = "0.2.1"
 pio = "0.2.0"
 byte = "0.2.6"
+num = { version = "0.4.0", default-features = false }
 
 # cargo build/run
 [profile.dev]
