--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,8 +50,8 @@ panic-halt= "0.2.0"
 #defmt-rtt = "0.3.0"
 
 
-# cortex-m-rtic = "0.6.0-rc.4"
-cortex-m-rtic = "1.0.0"
+cortex-m-rtic = "0.6.0-rc.4"
+#cortex-m-rtic = "1.0.0"
 heapless = "0.7.16"
 # static-box = "0.2.0"
 pio-proc = "0.2.1"
